# snare

./: .gitignore  README.md  package-lock.json  package.json
scripts/: custom_args.lua  proxy.py
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/certs/: ca.cnf  ca.crt
src-tauri/src/: main.rs  network.rs  proxy.rs  script.rs
src/lib/: network.ts  scope.ts  script.ts  search.ts  store.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/bruter/: +page.svelte
src/routes/components/: ResizableTable.svelte
src/routes/extensions/: +page.svelte
src/routes/forward/: +page.svelte
src/routes/prober/: +page.svelte
src/routes/repeater/: +page.svelte
src/routes/scan/: +page.svelte
src/routes/scopes/: +page.svelte
src/routes/tokenizer/: +page.svelte
