[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
debug = false

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = "0.12.24"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
threadpool = "1.8.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
futures = "0.3.31"
anyhow = "1.0.100"
hyper = "1.8.1"
rcgen = { version = "0.14.5", features = ["pem", "x509-parser"] }
tls-parser = "0.12.2"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.4"
snare_script = { git = "https://github.com/SimZooo/snare_script" }
env_logger = "0.11.8"
